--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
   <h2 id="estado">Esperando...</h2>
   <div class="counter" id="conteos">Comidas hoy - Dadiva: 0 | Cypher: 0 | Harbinjer: 0</div>
 
-  <!-- Alarm sound -->
+  <!-- Sounds -->
   <audio id="bling" src="hazelnut_cheesecake.mp3" preload="auto"></audio>
+  <audio id="alarm" src="alarm.mp3" preload="auto"></audio>
 
   <script>
-    // Google Form POST URL for point logging
     const formUrl = "https://docs.google.com/forms/d/e/1FAIpQLSfkGu1in-FuB7sU4-H2TycvmaDxZ0IYvIGVMlolaw5i4_77Xw/formResponse";
 
     let counts = { Dadiva: 0, Cypher: 0, Harbinjer: 0 };
@@ -112,18 +112,15 @@
     let isEating = true;
     let timerRunning = false;
 
-    // Update points display (no emojis)
     function updateCountDisplay() {
       document.getElementById("conteos").innerHTML =
         `Comidas hoy - Dadiva: ${counts.Dadiva} | Cypher: ${counts.Cypher} | Harbinjer: ${counts.Harbinjer}`;
     }
 
-    // Disable all buttons while timer runs
     function disableButtons() {
       document.querySelectorAll("#botones button").forEach(btn => btn.disabled = true);
     }
 
-    // Enable buttons after timer resets
     function enableButtons() {
       const botonesDiv = document.getElementById("botones");
       botonesDiv.innerHTML = `
@@ -133,7 +130,6 @@
       `;
     }
 
-    // Submit points via Google Form POST
     function logPoints(nombre, tipo, puntos) {
       const data = new URLSearchParams();
       data.append("entry.511948436", nombre);
@@ -148,7 +144,6 @@
         .catch(e => console.error("❌ Error logging points:", e));
     }
 
-    // Start timer for a child, increment count, log points for eating time
     function startTimer(nombre) {
       if (timerRunning) return;
 
@@ -159,6 +154,11 @@
 
       logPoints(nombre, "Temporizador - Comida", 2);
 
+      // Play alarm at start
+      const alarm = document.getElementById("alarm");
+      alarm.currentTime = 0;
+      alarm.play();
+
       isEating = true;
       document.getElementById("apagarBtn")?.remove();
       disableButtons();
@@ -166,7 +166,6 @@
       startCountdown(30 * 60, "Tiempo de comer");
     }
 
-    // Countdown function, triggers alarm and next phase
     function startCountdown(seconds, label) {
       clearInterval(interval);
       interval = setInterval(() => {
@@ -178,17 +177,23 @@
         if (seconds <= 0) {
           clearInterval(interval);
           document.getElementById("estado").innerText = "🔔 Espera...";
-          const alarm = document.getElementById("bling");
-          alarm.loop = true;
-          alarm.play();
 
           if (isEating) {
+            // Play hazelnut_cheesecake after eating
+            const bling = document.getElementById("bling");
+            bling.currentTime = 0;
+            bling.play();
+
             setTimeout(() => {
               isEating = false;
               logPoints(currentChild, "Temporizador - Quehaceres", 0);
               startCountdown(30 * 60, "A limpiar");
-            }, 30000); // 30-second wait before chore timer
+            }, 30000); // 30-second break
           } else {
+            // Play alarm again after chores
+            const alarm = document.getElementById("alarm");
+            alarm.currentTime = 0;
+            alarm.play();
             showStopButton();
           }
         }
@@ -196,13 +201,14 @@
       }, 1000);
     }
 
-    // Show stop alarm button, reset on click
     function showStopButton() {
       const stopBtn = document.createElement("button");
       stopBtn.innerText = "Apagar alarma";
       stopBtn.id = "apagarBtn";
       stopBtn.style.backgroundColor = "#d00000";
       stopBtn.onclick = () => {
+        document.getElementById("alarm").pause();
+        document.getElementById("alarm").currentTime = 0;
         document.getElementById("bling").pause();
         document.getElementById("bling").currentTime = 0;
         resetScreen();
@@ -212,7 +218,6 @@
       document.getElementById("estado").innerText = "Toca para apagar y reiniciar";
     }
 
-    // Reset buttons and status for new timer start
     function resetScreen() {
       enableButtons();
       document.getElementById("estado").innerText = "Esperando...";
